# cookiefest-hackathon-marketplace

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
back/python-api/: Makefile  pyproject.toml  run_tests.py  runparser.py  start.py
back/python-api/alembic/: env.py
back/python-api/alembic/versions/: 40542f08e436_.py  49a708a9ac1b_.py  5ac29ce5453f_.py  89bc01020df5_.py  9641df9cb833_.py  a19a615b01a3_.py  bde17d1bffc9_.py  c13debdf16ce_.py  c2b03b554d2f_.py  e0742db119a2_.py  e301ceb6485f_.py  eac68a9bac3e_.py  f48062b71d6e_.py
back/python-api/app/cfg/: config.py
back/python-api/app/database/: database.py
back/python-api/app/database/abstract/: abc_repo.py
back/python-api/app/database/models/: favorite.py  item.py  market_ticket.py  merchant.py  order.py  product.py  productCategory.py  productMerchants.py  user.py  user_profile.py
back/python-api/app/database/repository/: favorite_repo.py  merchant_repository.py  order_repository.py  product_repository.py  shop_repository.py  ticket_repository.py  user_profile.py  user_repository.py
back/python-api/app/routing/: auth.py  elasticsearch_router.py  favorite_router.py  main_router.py  order_router.py  profile_router.py  shop.py  ticket_router.py
back/python-api/app/schema/: articul_delete.py  create_favorite.py  create_order.py  create_ticket.py  get_serivce.py  register_profile.py  register_request.py
back/python-api/app/tests/: databaseconnect.py
back/python-api/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
front/: Makefile  (+8 more)
(+85 files in other folders)
