[tool.poetry]
name = "cookiefest"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <89967499+xxxw1tnessbtwxxx@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
pyjwt = "^2.10.1"
starlette = "^0.41.3"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
retry = "^0.9.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
yarl = "^1.18.0"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
