[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <89967499+xxxw1tnessbtwxxx@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
uvicorn = "^0.32.1"
psycopg2-binary = "^2.9.10"
starlette = "^0.41.3"
pyjwt = "^2.10.1"
yarl = "^1.18.0"
elasticsearch = "^8.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
